Revision history for Redis

{{$NEXT}}

1.990_01  2016-08-05 17:17:28CEST+0200 Europe/Paris
   * fix issue #122: don't attempt to close an already closed or undefined socket
   * fix issue #120 and #111: don't depend on locales for matching error messages
   * fix issue #118: spelling mistake
   * fix issue #116: forbid continuing using socket after a read timeout
   * fix issue #115: Unexpected error condition 54/freebsd

1.982     2016-02-11 09:02:40CET+0100 Europe/Paris
   * fix issue #117: fix backward compatibility with 5.8

1.981     2015-09-29 12:31:57CEST+0200 Europe/Paris
   * fix a bug where when not yet connected, pid is undef, leading to warnings

1.980     2015-08-24 09:48:08CEST+0200 Europe/Paris
   * fix "set" documentation as per Emanuele Tomasi <et@libersoft.it> suggestion

1.979     2015-05-14 14:28:35CEST+0200 Europe/Amsterdam

   * depends on IO::Socket::Timeout 0.29 that fixes an important bug on
     Windows, Solaris, when mixing sockets with and without timeouts.

1.978     2015-01-28 09:52:27 Europe/Amsterdam

   * reshape the documentation
   * croak when reconnecting while responses are pending (#101)
   * merge PR#106 ( support "0" in topic )

1.977     2015-01-28 01:10:31 Europe/Amsterdam

1.976     2014-10-03 15:05:58 Europe/Amsterdam

1.975     2014-08-03 20:50:25 Europe/Amsterdam

   * Clarification about reconnect and read_timeout (#89)
   * Test::CPAN::Meta (et al.) are required even if unused (#92)

1.974     2014-05-16 21:42:48 Europe/Amsterdam

   * released as stable version, no change

1.973_04  2014-05-12 22:53:06 Europe/Amsterdam

   * release again, last one was screwed up.
   * fix #85 (PR #86) reconnect during transaction

1.973_03  2014-05-12 22:49:07 Europe/Amsterdam

   * fix #85 (PR #86) reconnect during transaction

1.973_02  2014-04-30 12:04:29 Europe/Amsterdam

   * merge PR #84 optimize try read sock

1.973_01  2014-04-26 18:00:31 Europe/Amsterdam

   * use new network code from Ivan Kruglov
   * fix sentinel tests