@@ -174,6 +174,22 @@ subtest "Reconnect works after WATCH + MULTI + DISCARD" => sub {
   ok($r->set('reconnect' => 1), 'setting second key should not fail');
 };
 
+my ($c2, $srv2) = redis();
+END { $c2->() if $c2 }
+
+subtest 'Reconnection by read timeout discards pending commands' => sub {
+  ok(my $r = Redis->new(server => $srv2, read_timeout => 1, reconnect => 1), 'connected to our test redis-server');
+
+  ok($r->set(foo => 'bar'), 'set foo bar');
+
+  eval { $r->debug(sleep => 4) };
+  ok $@, 'sleep command is timeout';
+
+  diag 'waiting for sleep command';
+  sleep 4;
+  is($r->get('foo'), 'bar', 'the value of key foo is bar');
+};
+
 done_testing();
 
 
